# navigation2

doc/design/: multi-robot.md
doc/exploration/: multi-robot.md
nav2_actions/: CMakeLists.txt  package.xml
nav2_actions/src/: action_client.hpp  action_server.hpp  simple_action_client.hpp  simple_action_server.hpp  test_client.cpp  test_server.cpp
nav2_amcl/src/: amcl_node.cpp
nav2_bringup/launch/: nav2_bringup_launch.py  nav2_default_view.rviz  nav2_instances_launch.py  nav2_localization_launch.py  nav2_multirobot_simulation_launch.py  nav2_navigation_launch.py  nav2_params.yaml  nav2_simulation_launch.py  nav2_spawn_turtlebot.py  simulations_launch.py  spawn_robot_launch.py  spawn_robots_launch.py  spawn_turtlebot.py
nav2_bt_navigator/: CMakeLists.txt  package.xml
nav2_bt_navigator/behavior_trees/: navigate_w_replanning.xml  replan.xml  simple_sequential.xml
nav2_bt_navigator/src/: bt_navigator.cpp  navigate_to_pose_behavior_tree.cpp
nav2_controller/: CMakeLists.txt  package.xml
nav2_controller/src/: main.cpp  nav2_controller.cpp  nav2_controller_client.cpp
nav2_costmap_2d/plugins/: obstacle_layer.cpp  static_layer.cpp
nav2_motion_primitives/: CMakeLists.txt
nav2_msgs/: CMakeLists.txt
nav2_navfn_planner/: CMakeLists.txt  package.xml
nav2_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
nav2_simple_navigator/: CMakeLists.txt  package.xml
nav2_simple_planner/: CMakeLists.txt  README.md  package.xml
nav2_system_tests/: CMakeLists.txt
nav2_tasks/: CMakeLists.txt  package.xml
nav2_util/: CMakeLists.txt
(+101 files in other folders)
